@@ -8,8 +8,6 @@
 		<PROPERTY NAME="commentEnd" VALUE=" |#" />
 		<PROPERTY NAME="lineComment" VALUE=";" />
 		<PROPERTY NAME="noWordSep" VALUE="_-+?:" />
-		<PROPERTY NAME="indentOpenBrackets" VALUE="(" />
-		<PROPERTY NAME="indentCloseBrackets" VALUE=")" />
 	</PROPS>
 	<RULES IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE"
 		NO_WORD_SEP="_-+?:">
